8255009: delta apply fixes for JDK-8246774 and JDK-8253455, pushed too soon