@@ -22,5 +22,8 @@
  */
 
 // key: compiler.err.illegal.record.component.name
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source ${jdk.version}
 
 record R(int hashCode) {}
